add instruction how use SecurityManager with DesktopApp, update project poms